Update Render deployment config

--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,9 @@ services:
     name: muthujaya-dairy-backend
     runtime: node
     plan: free
-    buildCommand: cd backend && npm install
-    startCommand: cd backend && node server.js
+    rootDir: backend
+    buildCommand: npm install
+    startCommand: node server.js
     envVars:
       - key: NODE_ENV
         value: production
